# python-project-52

./: .codeclimate  .codeclimate.yml  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint-check.yml  test-check.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json
task_manager/label/: apps.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/status/: urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task/: apps.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: 404.html  base.html  delete_form.html  footer.html  form.html  index.html  login.html  navbar.html  register.html
task_manager/templates/components/: footer.html  header.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: delete.html  index.html  show.html  update.html
task_manager/tests/: test_labels.py  test_statuses.py  tests.py
task_manager/tests/fixtures/: tasks.json  users.json
task_manager/user/: urls.py  views.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+6 files in other folders)
