[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ShcherbinaDmitry <shcherbinadmitry@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
dj-database-url = "^1.2.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
django-bootstrap4 = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
